# new-cpp-project

./: .gitignore  CMakeLists.txt  Config.h.in  README.md
cmake/: Config.cmake  ConfigApp.cmake  ConfigCommon.cmake  ConfigGuiApp.cmake  ConfigLib.cmake  ConfigTest.cmake
gui/: CMakeLists.txt  client.cfg  main.cpp
include/pcx/: Configuration.h  IndexPool.h  Logging.h  MessageBus.h  ModuleRegistry.h  ServiceRegistry.h  Utils.h
include/pcx/impl/: BaseDependencyContainer.h  BaseLazyFactory.h  TypedObjectRegistry.h
include/sample-lib/: sample-lib.h
pcx/: CMakeLists.txt  Configuration.cpp  IndexPool.cpp  Logging.h  ModuleRegistry.cpp  ServiceRegistry.cpp  Utils.cpp
pcx/configurations/: FileConfiguration.h
pcx/impl/: FileConfiguration.cpp  TypedObjectRegistry.cpp
pcx/test/: CMakeLists.txt  TestBaseDependencyContainer.cpp  TestBaseLazyFactory.cpp  TestMain.cpp  TestMessageBus.cpp  TestModuleRegistry.cpp  TestServiceRegistry.cpp  stdafx.cpp  test_eventbus.cpp  test_utils.cpp
sample-app/: CMakeLists.txt  sample-app.cpp
sample-lib/: CMakeLists.txt  sample-lib.cpp
